# munge

./: Cargo.toml  README.md  crates-io.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
munge/: Cargo.toml  LICENSE  crates-io.md  example.md
munge/src/: __macro.rs  impls.rs  internal.rs  lib.rs
munge/tests/: tests.rs
munge/tests/ui/: double_borrow.rs  double_borrow.stderr  move_while_borrowed.rs  move_while_borrowed.stderr  no_accessing_through_unions.rs  no_accessing_through_unions.stderr  no_drilling_through_deref.rs  no_drilling_through_deref.stderr  no_drilling_through_refs.rs  no_drilling_through_refs.stderr  packed.rs  packed.stderr  prevent_misuse.rs  prevent_misuse.stderr  rest_patterns_ref_only.rs  rest_patterns_ref_only.stderr
munge_macro/: Cargo.toml
munge_macro/src/: lib.rs
src/: impls.rs  lib.rs
tests/: tests.rs
tests/ui/: packed.rs  packed.stderr
