[workspace]
members = [
    "munge",
    "munge_macro",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/djkoloski/munge"

[workspace.dependencies]
munge_macro = { version = "0.4.0", path = "munge_macro" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
trybuild = "1.0"
