[workspace]
members = [
    "munge",
    "munge_macro",
]
resolver = "2"

[workspace.package]
version = "0.4.6"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.81"
readme = "README.md"
repository = "https://github.com/djkoloski/munge"
keywords = ["macro", "no_std"]
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]

[workspace.dependencies]
munge_macro = { version = "=0.4.6", default-features = false, path = "munge_macro" }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
rustversion = { version = "1", default-features = false }
syn = { version = "2", default-features = false }
trybuild = { version = "1", default-features = false }
