[package]
name = "munge"
version = "0.4.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
description = "Macro for custom destructuring"
license = "MIT"
documentation = "https://docs.rs/munge"
repository = "https://github.com/djkoloski/munge"
keywords = ["munge", "macro", "destructure"]
categories = ["no-std", "rust-patterns"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
munge_macro = { version = "0.3", path = "../munge_macro" }

[dev-dependencies]
compiletest_rs = "0.7"
