[package]
name = "munge"
description = "Macro for custom destructuring"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/munge"
keywords = ["munge", "macro", "destructure"]
categories = ["no-std", "rust-patterns"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
munge_macro.workspace = true

[dev-dependencies]
trybuild.workspace = true
