[package]
name = "munge_macro"
version = "0.3.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
description = "Macro for custom destructuring"
license = "MIT"
documentation = "https://docs.rs/munge_macro"
repository = "https://github.com/djkoloski/munge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
